--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-caescript = {path = "../caescript", features=["vm"]}
+caescript = { git="https://github.com/caelansar/caescript.git", branch = "master", features=["vm"] }
 wasm-bindgen = "0.2"
 
 
